fixed project card z-index

--- a/src/index.css
+++ b/src/index.css
@@ -617,6 +617,7 @@ input[type="submit"] {
         flex-direction: row;
         width: 300px;
         height:max-content;
+        z-index: -3;
     }
     
 }
